radar/service.yaml
apiVersion: v1
kind: Service
metadata:
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  name: radar
  namespace: radar
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32054
    port: 9280
    protocol: TCP
    targetPort: 9280
  selector:
    app: radar
  sessionAffinity: None
  type: LoadBalancer
