radar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar-ingress
  namespace: radar
spec:
  ingressClassName: traefik
  rules:
  - host: radar.ddellspe.dev
    http:
      paths:
      - backend:
          service:
            name: radar
            port:
              number: 9280
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radar.ddellspe.dev
    secretName: ddellspe-tls
